ffi/tim2tox_ffi.h

// Update known groups list from Dart layer
// groups_str: newline-separated list of group IDs (e.g., "tox_0\ntox_1\ntox_2\n")
// This should be called by Dart layer whenever knownGroups changes
// Returns number of groups updated
int tim2tox_ffi_update_known_groups(int64_t instance_id, const char* groups_str);
// Get known group IDs from global list (synchronized from Dart layer)
// Writes group IDs as newline-separated lines into buffer; returns bytes written, or 0 on error
int tim2tox_ffi_get_known_groups(int64_t instance_id, char* buffer, int buffer_len);
// Get full tox group chat_id from groupID
// group_id: group ID like "tox_6"
// out_chat_id: output buffer for chat_id (64-char hex string, TOX_GROUP_CHAT_ID_SIZE * 2)
// out_len: size of output buffer (should be at least 65 for null terminator)
// Returns: 1 on success, 0 on error
int tim2tox_ffi_get_group_chat_id(int64_t instance_id, const char* group_id, char* out_chat_id, int out_len);
// Store group chat_id to persistence (called from C++ when group is created)
// group_id: group ID like "tox_6"
// chat_id: 64-char hex string chat_id
// Returns: 1 on success, 0 on error
int tim2tox_ffi_set_group_chat_id(int64_t instance_id, const char* group_id, const char* chat_id);
// Store group type to persistence (called from C++ when group is created)
// group_id: group ID like "tox_6"
// group_type: "group" (new API) or "conference" (old API)
// Returns: 1 on success, 0 on error
int tim2tox_ffi_set_group_type(int64_t instance_id, const char* group_id, const char* group_type);
// Get group chat_id from persistence (called from C++ to rebuild mapping)
// group_id: group ID like "tox_6"
// out_chat_id: output buffer for chat_id (64-char hex string)
// out_len: size of output buffer (should be at least 65 for null terminator)
// Returns: 1 on success, 0 on error
int tim2tox_ffi_get_group_chat_id_from_storage(int64_t instance_id, const char* group_id, char* out_chat_id, int out_len);
// Get count of conferences restored from savedata (for Dart to discover and assign group_ids)
// instance_id: 0 = current instance
// Returns: count (>= 0), or -1 on error
int tim2tox_ffi_get_restored_conference_count(int64_t instance_id);
// Get list of conference numbers restored from savedata
// instance_id: 0 = current instance
// out_list: buffer to receive conference numbers (uint32_t each)
// max_count: maximum number of entries to write
// Returns: number of entries written (0..max_count), or -1 on error
int tim2tox_ffi_get_restored_conference_list(int64_t instance_id, uint32_t* out_list, int max_count);
// Rejoin all known groups using stored chat_id (c-toxcore recommended approach)
// This should be called from Dart layer after init() completes and known groups are synced
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_rejoin_known_groups(void);
// Auto-accept group invites setting
// Set auto-accept group invites setting (called from Dart when setting changes)
// enabled: 1 to enable auto-accept, 0 to disable
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_set_auto_accept_group_invites(int64_t instance_id, int enabled);
// Get auto-accept group invites setting (called from C++ before accepting invites)
// Returns: 1 if enabled, 0 if disabled
int tim2tox_ffi_get_auto_accept_group_invites(int64_t instance_id);
// ============================================================================
// Audio/Video (ToxAV) APIs
// ============================================================================

// Initialize ToxAV (must be called after SDK init and login)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_initialize(int64_t instance_id);
// Shutdown ToxAV
void tim2tox_ffi_av_shutdown(int64_t instance_id);
// Iterate ToxAV (must be called regularly in main loop)
void tim2tox_ffi_av_iterate(int64_t instance_id);
// Start a call
// friend_number: Tox friend number (use tim2tox_ffi_get_friend_number_by_user_id to convert)
// audio_bit_rate: audio bit rate (0 = disable audio, recommended: 64000)
// video_bit_rate: video bit rate (0 = disable video, recommended: 5000000)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_start_call(int64_t instance_id, uint32_t friend_number, uint32_t audio_bit_rate, uint32_t video_bit_rate);
// Answer an incoming call
// friend_number: Tox friend number
// audio_bit_rate: audio bit rate (0 = disable audio, recommended: 64000)
// video_bit_rate: video bit rate (0 = disable video, recommended: 5000000)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_answer_call(int64_t instance_id, uint32_t friend_number, uint32_t audio_bit_rate, uint32_t video_bit_rate);
// End a call
// friend_number: Tox friend number
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_end_call(int64_t instance_id, uint32_t friend_number);
// Mute/unmute audio
// friend_number: Tox friend number
// mute: 1 to mute, 0 to unmute
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_mute_audio(int64_t instance_id, uint32_t friend_number, int mute);
// Hide/show video
// friend_number: Tox friend number
// hide: 1 to hide, 0 to show
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_mute_video(int64_t instance_id, uint32_t friend_number, int hide);
// Send audio frame
// friend_number: Tox friend number
// pcm: PCM audio data (int16_t samples)
// sample_count: number of samples
// channels: number of channels (1 = mono, 2 = stereo)
// sampling_rate: sampling rate in Hz (e.g., 48000)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_send_audio_frame(int64_t instance_id, uint32_t friend_number, const int16_t* pcm, size_t sample_count, uint8_t channels, uint32_t sampling_rate);
// Send video frame (YUV420 format)
// friend_number: Tox friend number
// width: frame width
// height: frame height
// y: Y plane data
// u: U plane data
// v: V plane data
// y_stride: Y plane stride
// u_stride: U plane stride
// v_stride: V plane stride
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_send_video_frame(int64_t instance_id, uint32_t friend_number, uint16_t width, uint16_t height,
                                     const uint8_t* y, const uint8_t* u, const uint8_t* v,
                                     int32_t y_stride, int32_t u_stride, int32_t v_stride);
// Set audio bit rate
// friend_number: Tox friend number
// audio_bit_rate: audio bit rate in kbit/sec (0 = disable)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_set_audio_bit_rate(int64_t instance_id, uint32_t friend_number, uint32_t audio_bit_rate);
// Set video bit rate
// friend_number: Tox friend number
// video_bit_rate: video bit rate in kbit/sec (0 = disable)
// Returns: 1 on success, 0 on failure
int tim2tox_ffi_av_set_video_bit_rate(int64_t instance_id, uint32_t friend_number, uint32_t video_bit_rate);
// AV callback types
typedef void (*tim2tox_av_call_callback_t)(uint32_t friend_number, int audio_enabled, int video_enabled, void* user_data);
typedef void (*tim2tox_av_call_state_callback_t)(uint32_t friend_number, uint32_t state, void* user_data);
typedef void (*tim2tox_av_audio_receive_callback_t)(uint32_t friend_number, const int16_t* pcm, size_t sample_count, uint8_t channels, uint32_t sampling_rate, void* user_data);
typedef void (*tim2tox_av_video_receive_callback_t)(uint32_t friend_number, uint16_t width, uint16_t height, const uint8_t* y, const uint8_t* u, const uint8_t* v, void* user_data);
// Set AV callbacks
// Pass NULL to disable a callback
void tim2tox_ffi_av_set_call_callback(int64_t instance_id, tim2tox_av_call_callback_t callback, void* user_data);
void tim2tox_ffi_av_set_call_state_callback(int64_t instance_id, tim2tox_av_call_state_callback_t callback, void* user_data);
void tim2tox_ffi_av_set_audio_receive_callback(int64_t instance_id, tim2tox_av_audio_receive_callback_t callback, void* user_data);
void tim2tox_ffi_av_set_video_receive_callback(int64_t instance_id, tim2tox_av_video_receive_callback_t callback, void* user_data);
// Helper: Get friend number by user ID
// user_id: user ID (hex string)
// Returns: friend number on success, UINT32_MAX on failure
uint32_t tim2tox_ffi_get_friend_number_by_user_id(const char* user_id);
// Helper: Get user ID (public key hex string) by friend number
// friend_number: Tox friend number
// Returns: pointer to 64-char hex string on success, NULL on failure
// Note: returned pointer is valid until the next call from the same thread
const char* tim2tox_ffi_get_user_id_by_friend_number(uint32_t friend_number);
// ============================================================================
// Tox Profile Encryption/Decryption APIs (for .tox file import/export)
// ============================================================================

// Check if data is encrypted (checks magic number in first TOX_PASS_ENCRYPTION_EXTRA_LENGTH bytes)
// data: data to check
// data_len: length of data (must be at least TOX_PASS_ENCRYPTION_EXTRA_LENGTH)
// Returns: 1 if encrypted, 0 if not encrypted, -1 on error
int tim2tox_ffi_is_data_encrypted(const uint8_t* data, size_t data_len);
// Encrypt data with passphrase
// plaintext: plaintext data to encrypt
// plaintext_len: length of plaintext data
// passphrase: encryption passphrase (can be NULL or empty for no encryption)
// passphrase_len: length of passphrase
// ciphertext: output buffer for encrypted data (must be at least plaintext_len + TOX_PASS_ENCRYPTION_EXTRA_LENGTH)
// ciphertext_capacity: capacity of ciphertext buffer
// Returns: encrypted data length on success, -1 on error
int tim2tox_ffi_pass_encrypt(
    const uint8_t* plaintext, size_t plaintext_len,
    const uint8_t* passphrase, size_t passphrase_len,
    uint8_t* ciphertext, size_t ciphertext_capacity
);
// Decrypt data with passphrase
// ciphertext: encrypted data to decrypt
// ciphertext_len: length of encrypted data
// passphrase: decryption passphrase (can be NULL or empty if not encrypted)
// passphrase_len: length of passphrase
// plaintext: output buffer for decrypted data (must be at least ciphertext_len - TOX_PASS_ENCRYPTION_EXTRA_LENGTH)
// plaintext_capacity: capacity of plaintext buffer
// Returns: decrypted data length on success, -1 on error
int tim2tox_ffi_pass_decrypt(
    const uint8_t* ciphertext, size_t ciphertext_len,
    const uint8_t* passphrase, size_t passphrase_len,
    uint8_t* plaintext, size_t plaintext_capacity
);
// Extract Tox ID (public key) from toxProfile data
// profile_data: toxProfile binary data (may be encrypted)
// profile_len: length of profile data
// passphrase: decryption passphrase if encrypted (can be NULL if not encrypted)
// passphrase_len: length of passphrase
// out_tox_id: output buffer for Tox ID (hex string, 64 characters)
// out_tox_id_len: capacity of out_tox_id buffer
// Returns: length of Tox ID string on success, -1 on error
int tim2tox_ffi_extract_tox_id_from_profile(
    const uint8_t* profile_data, size_t profile_len,
    const uint8_t* passphrase, size_t passphrase_len,
    char* out_tox_id, size_t out_tox_id_len
);
// Get the number of peers in a conference (for Dart to set memberCount)
// instance_id: 0 = current instance
// conference_number: the conference index
// Returns: peer count (>= 0), or -1 on error
int tim2tox_ffi_get_conference_peer_count(int64_t instance_id, uint32_t conference_number);
// Get the public keys (hex) of all peers in a conference
// instance_id: 0 = current instance
// conference_number: the conference index
// out_buf: buffer to receive comma-separated 64-char hex public keys
// buf_size: size of output buffer in bytes
// Returns: number of peers written, or -1 on error
int tim2tox_ffi_get_conference_peer_pubkeys(int64_t instance_id, uint32_t conference_number, char* out_buf, int buf_size);
// Test-only: Inject a raw JSON callback string directly into the Dart ReceivePort.
// This simulates native callbacks for testing the binary replacement path
// (NativeLibraryManager._handleNativeMessage → _handleNativeCallback → listener dispatch).
// json_callback: JSON string matching the expected format, e.g.:
//   {"callback":"globalCallback","callbackType":2,"instance_id":0,"status":0,"code":0,"desc":""}
// Returns: 1 on success (posted to Dart port), 0 on failure (port not registered, etc.)
int tim2tox_ffi_inject_callback(const char* json_callback);