dart/lib/ffi/tim2tox_ffi.dart

  
  late final int Function(int) avInitialize = _lib.lookupFunction<_av_initialize_c, int Function(int)>('tim2tox_ffi_av_initialize');
  late final void Function(int) avShutdown = _lib.lookupFunction<_av_shutdown_c, void Function(int)>('tim2tox_ffi_av_shutdown');
  late final void Function(int) avIterate = _lib.lookupFunction<_av_iterate_c, void Function(int)>('tim2tox_ffi_av_iterate');
  late final int Function(int, int, int, int) avStartCallNative = _lib.lookupFunction<_av_start_call_c, int Function(int, int, int, int)>('tim2tox_ffi_av_start_call');
  late final int Function(int, int, int, int) avAnswerCallNative = _lib.lookupFunction<_av_answer_call_c, int Function(int, int, int, int)>('tim2tox_ffi_av_answer_call');
  late final int Function(int, int) avEndCallNative = _lib.lookupFunction<_av_end_call_c, int Function(int, int)>('tim2tox_ffi_av_end_call');
  late final int Function(int, int, int) avMuteAudioNative = _lib.lookupFunction<_av_mute_audio_c, int Function(int, int, int)>('tim2tox_ffi_av_mute_audio');
  late final int Function(int, int, int) avMuteVideoNative = _lib.lookupFunction<_av_mute_video_c, int Function(int, int, int)>('tim2tox_ffi_av_mute_video');
  late final int Function(int, int, ffi.Pointer<ffi.Int16>, int, int, int) avSendAudioFrameNative = _lib.lookupFunction<_av_send_audio_frame_c, int Function(int, int, ffi.Pointer<ffi.Int16>, int, int, int)>('tim2tox_ffi_av_send_audio_frame');
  late final int Function(int, int, int, int, ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, int, int, int) avSendVideoFrameNative = _lib.lookupFunction<_av_send_video_frame_c, int Function(int, int, int, int, ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, int, int, int)>('tim2tox_ffi_av_send_video_frame');
  late final int Function(int, int, int) avSetAudioBitRateNative = _lib.lookupFunction<_av_set_audio_bit_rate_c, int Function(int, int, int)>('tim2tox_ffi_av_set_audio_bit_rate');
  late final int Function(int, int, int) avSetVideoBitRateNative = _lib.lookupFunction<_av_set_video_bit_rate_c, int Function(int, int, int)>('tim2tox_ffi_av_set_video_bit_rate');
  late final void Function(int, ffi.Pointer<ffi.NativeFunction<_av_call_callback_native>>, ffi.Pointer<ffi.Void>) avSetCallCallbackNative = _lib.lookupFunction<_av_set_call_callback_c, void Function(int, ffi.Pointer<ffi.NativeFunction<_av_call_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_av_set_call_callback');
  late final void Function(int, ffi.Pointer<ffi.NativeFunction<_av_call_state_callback_native>>, ffi.Pointer<ffi.Void>) avSetCallStateCallbackNative = _lib.lookupFunction<_av_set_call_state_callback_c, void Function(int, ffi.Pointer<ffi.NativeFunction<_av_call_state_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_av_set_call_state_callback');
  late final void Function(int, ffi.Pointer<ffi.NativeFunction<_av_audio_receive_callback_native>>, ffi.Pointer<ffi.Void>) avSetAudioReceiveCallbackNative = _lib.lookupFunction<_av_set_audio_receive_callback_c, void Function(int, ffi.Pointer<ffi.NativeFunction<_av_audio_receive_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_av_set_audio_receive_callback');
  late final void Function(int, ffi.Pointer<ffi.NativeFunction<_av_video_receive_callback_native>>, ffi.Pointer<ffi.Void>) avSetVideoReceiveCallbackNative = _lib.lookupFunction<_av_set_video_receive_callback_c, void Function(int, ffi.Pointer<ffi.NativeFunction<_av_video_receive_callback_native>>, ffi.Pointer<ffi.Void>)>('tim2tox_ffi_av_set_video_receive_callback');
  late final int Function(ffi.Pointer<pkgffi.Utf8>) getFriendNumberByUserIdNative = _lib.lookupFunction<_get_friend_number_by_user_id_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_get_friend_number_by_user_id');
  late final ffi.Pointer<pkgffi.Utf8> Function(int) getUserIdByFriendNumberNative = _lib.lookupFunction<_get_user_id_by_friend_number_c, ffi.Pointer<pkgffi.Utf8> Function(int)>('tim2tox_ffi_get_user_id_by_friend_number');
  
  // Update known groups list in C++ layer (called when knownGroups changes in Dart)
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>) updateKnownGroupsNative = 
      _lib.lookupFunction<_update_known_groups_c, int Function(int, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_update_known_groups');
  
  // Get known groups from C++ layer
  late final int Function(int, ffi.Pointer<ffi.Int8>, int) getKnownGroupsNative = 
      _lib.lookupFunction<_get_known_groups_c, int Function(int, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_known_groups');
  
  // Get full tox group chat_id from groupID
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Int8>, int) getGroupChatIdNative = 
      _lib.lookupFunction<_get_group_chat_id_c, int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_group_chat_id');
  
  // Store/Get group chat_id from persistence
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) setGroupChatIdNative = 
      _lib.lookupFunction<_set_group_chat_id_c, int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_set_group_chat_id');
  
  // Get count of conferences restored from savedata (for discovering and assigning group_ids)
  late final int Function(int) getRestoredConferenceCountNative = 
      _lib.lookupFunction<_get_restored_conference_count_c, int Function(int)>('tim2tox_ffi_get_restored_conference_count');
  
  // Get list of conference numbers restored from savedata
  late final int Function(int, ffi.Pointer<ffi.Uint32>, int) getRestoredConferenceListNative =
      _lib.lookupFunction<_get_restored_conference_list_c, int Function(int, ffi.Pointer<ffi.Uint32>, int)>('tim2tox_ffi_get_restored_conference_list');

  // Get peer count for a specific conference
  late final int Function(int, int) getConferencePeerCountNative =
      _lib.lookupFunction<_get_conference_peer_count_c, int Function(int, int)>('tim2tox_ffi_get_conference_peer_count');

  // Get comma-separated hex pubkeys of all peers in a conference
  late final int Function(int, int, ffi.Pointer<ffi.Int8>, int) getConferencePeerPubkeysNative =
      _lib.lookupFunction<_get_conference_peer_pubkeys_c, int Function(int, int, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_conference_peer_pubkeys');

  // Set group type in C++ storage (e.g. "conference") so RejoinKnownGroups can match
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>) setGroupTypeNative = 
      _lib.lookupFunction<_set_group_type_c, int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_set_group_type');
  
  // Rejoin all known groups using stored chat_id (c-toxcore recommended approach)
  late final int Function() rejoinKnownGroupsNative = 
      _lib.lookupFunction<_rejoin_known_groups_c, int Function()>('tim2tox_ffi_rejoin_known_groups');
  
  // Auto-accept group invites setting
  late final int Function(int, int) setAutoAcceptGroupInvitesNative = 
      _lib.lookupFunction<_set_auto_accept_group_invites_c, int Function(int, int)>('tim2tox_ffi_set_auto_accept_group_invites');
  late final int Function(int) getAutoAcceptGroupInvitesNative = 
      _lib.lookupFunction<_get_auto_accept_group_invites_c, int Function(int)>('tim2tox_ffi_get_auto_accept_group_invites');
  
  late final int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Int8>, int) getGroupChatIdFromStorageNative = 
      _lib.lookupFunction<_get_group_chat_id_from_storage_c, int Function(int, ffi.Pointer<pkgffi.Utf8>, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_get_group_chat_id_from_storage');

  // ============================================================================
  // Tox Profile Encryption/Decryption FFI Bindings
  // ============================================================================
  
  late final int Function(ffi.Pointer<ffi.Uint8>, int) isDataEncryptedNative = 
      _lib.lookupFunction<_is_data_encrypted_c, int Function(ffi.Pointer<ffi.Uint8>, int)>('tim2tox_ffi_is_data_encrypted');
  
  late final int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int) passEncryptNative = 
      _lib.lookupFunction<_pass_encrypt_c, int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int)>('tim2tox_ffi_pass_encrypt');
  
  late final int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int) passDecryptNative = 
      _lib.lookupFunction<_pass_decrypt_c, int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int)>('tim2tox_ffi_pass_decrypt');
  
  late final int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Int8>, int) extractToxIdFromProfileNative =
      _lib.lookupFunction<_extract_tox_id_from_profile_c, int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Int8>, int)>('tim2tox_ffi_extract_tox_id_from_profile');

  /// Test-only: Inject a raw JSON callback string into the Dart ReceivePort.
  /// The JSON must match the format expected by NativeLibraryManager._handleNativeMessage.
  /// Returns 1 on success, 0 on failure.
  late final int Function(ffi.Pointer<pkgffi.Utf8>) injectCallbackNative =
      _lib.lookupFunction<_inject_callback_c, int Function(ffi.Pointer<pkgffi.Utf8>)>('tim2tox_ffi_inject_callback');

  /// Convenience wrapper for injectCallbackNative that handles string conversion.
  int injectCallback(String jsonCallback) {
    final ptr = jsonCallback.toNativeUtf8();
    try {
      return injectCallbackNative(ptr);
    } finally {
      pkgffi.malloc.free(ptr);
    }
  }

  /// Set unified log file path for C++ layer (call before init). Disables C++ console output.
  void setLogFile(String path) {
    final ptr = path.toNativeUtf8();
    try {
      setLogFileNative(ptr);
    } finally {
      pkgffi.malloc.free(ptr);
    }
  }

  /// Open the tim2tox FFI library
  /// 
  /// Tries to load the library from the executable directory first,
  /// then falls back to system library search path.
  /// Supports multiple platforms: macOS, Linux, Windows, Android, iOS
  static Tim2ToxFfi open() {
    if (Platform.isMacOS) {
      return _openMacOS();
    } else if (Platform.isLinux) {
      return _openLinux();
    } else if (Platform.isWindows) {
      return _openWindows();
    } else if (Platform.isAndroid) {
      return _openAndroid();
    } else if (Platform.isIOS) {
      return _openIOS();
    } else {
      throw UnsupportedError('Unsupported platform: ${Platform.operatingSystem}');
    }
  }

  /// Open library on macOS
  static Tim2ToxFfi _openMacOS() {
    final exeDir = File(Platform.resolvedExecutable).parent;
    final libName = 'libtim2tox_ffi.dylib';
    
    // Try absolute path from project root (for development/testing)
    final projectRootPaths = [
      '/Users/bin.gao/chat-uikit/tim2tox/build/ffi/$libName',
      '${exeDir.path}/../../tim2tox/build/ffi/$libName',
      '${exeDir.path}/../../../tim2tox/build/ffi/$libName',
    ];
    
    for (final libPath in projectRootPaths) {
      final libFile = File(libPath);
      if (libFile.existsSync()) {
        try {
          return Tim2ToxFfi._(ffi.DynamicLibrary.open(libFile.absolute.path));
        } catch (e) {
          // Continue to next path if this one fails
          continue;
        }
      }
    }
    
    // Try executable directory first
    final exeLib = File('${exeDir.path}/$libName');
    if (exeLib.existsSync()) {
      return Tim2ToxFfi._(ffi.DynamicLibrary.open(exeLib.path));
    }
    
    // Try application bundle (for packaged apps)
    try {
      final bundlePath = '${exeDir.path}/../Frameworks/$libName';
      final bundleLib = File(bundlePath);
      if (bundleLib.existsSync()) {
        return Tim2ToxFfi._(ffi.DynamicLibrary.open(bundleLib.path));
      }
    } catch (_) {}
